Review sheet remarks (partial)

--- a/D2.3/D2_3.tex
+++ b/D2.3/D2_3.tex
@@ -1,7 +1,8 @@
 \documentclass{template/openetcs_article}
 % Use the option "nocc" if the document is not licensed under Creative Commons
 %\documentclass[nocc]{template/openetcs_article}
-\usepackage{rotating,url,color}
+\usepackage{rotating,color}
+\usepackage{lipsum,url}
 \graphicspath{{./template/}{.}{./images/}}
 \begin{document}
 \frontmatter
@@ -35,7 +36,7 @@
 \affiliation{Systerel}
 
 % define the coverart
-\coverart[width=350pt]{chart}
+\coverart[width=350pt]{openETCS_EUPL}
  
 %define the type of report
 \reporttype{Definition}
@@ -63,7 +64,7 @@ Work Package &  WP2  \\
 Deliverable ID or doc. ref. & D2.3\\
 \hline
 Document title & Definition of the overall process for the formal description of ETCS and the rail system it works in \\
-Document version & 01.01 \\
+Document version & 01.02 \\
 Document authors (org.)  & Marielle Petit-Doche (Systerel) Matthias Güdemann (Systerel) \\
 \hline
 \end{tabular}
@@ -72,9 +73,15 @@ Document authors (org.)  & Marielle Petit-Doche (Systerel) Matthias Güdemann (S
 \hline
 \multicolumn{2}{|c|}{Review information} \\
 \hline
-Last version reviewed & 00.01.00 \\
+Last version reviewed & 01.01 \\
 \hline
 Main reviewers & S. Baro (SNCF) \\
+& P. Mahlmann (DB), B. Hekele (DB)\\
+& U. Stainke (Siemens AG) \\
+& S. Pinte (ERTMS Solutions) \\
+& H. Hungar (DLR), M. Behrens (DLR) \\
+& J. Welte ( TU-BS) \\
+& M. Pokam ( AEbt) \\
 \hline
 \end{tabular}
 
@@ -94,11 +101,13 @@ Approved by & Gilles Dalmas & WP2 leader & \\
 \hline
 \multicolumn{4}{|c|}{Document evolution} \\
 \hline
-00.01.00 & 01/03/2013 & M. Petit-Doche &  Document creation  \\
+00.01 & 01/03/2013 & M. Petit-Doche &  Document creation  \\
 Version &  Date & Author(s) & Justification  \\
 \hline  
-01.01.00 & 30/04/2013 & M. Petit-Doche &  Description of the process according Paris and Charleroi meeting  \\
+01.01 & 30/04/2013 & M. Petit-Doche &  Description of the process according Paris and Charleroi meeting  \\
 & & & Review comments on 00.01 \\
+\hline  
+01.02 & 27/05/2013 & M. Petit-Doche &  Review comments on 01.01 \\
 \hline  
 \end{tabular}
 
