--- a/D2.3/intro.tex
+++ b/D2.3/intro.tex
@@ -1,4 +1,3 @@
-
 \section{Introduction}
 
 The purpose of this document is to describe the specification and design activities for the OpenETCS project. The activities for safety, verification and validation are not in the scope of this document and will be described in WP4's documents.
@@ -32,7 +31,7 @@ The final goal is that industrial actors work with this model instead of the
 natural language specification.
 The objective is to cover as much as possible of the  functionality of the on-board unit described in SUBSET-026 and to show the capabilities of analyses of a complex system using formal approaches.
 
-\paragraph{Definition the safety case concept for the full model and apply it on a subset of the on-board unit}
+\paragraph{Definition the of safety case concept for the full model and apply it on a subset of the on-board unit}
 The safety strategy and the safety case concept required for the full validation of the product, compliant to the CENELEC standards shall be taken into account in all steps of the specification and design process. This will allow industrial actors to reuse the models and processes to develop certifiable products.
 
 In particular the definition of the process shall take into account specification as well as verification and validation of the safety properties on the models. The outputs of WP4 (safety plan, safety case concept, verification plan and validation plan) will complete the description of the safety process.
@@ -51,9 +50,7 @@ The tool chain should include model editors, code generators, verification tools
 
 \paragraph{Provide an executable software package generated from the specification of on-board ETCS}
 
-An executable software of the specification shall be provided, as well as a non vital implementation of the on-board unit for laboratory test, simulation and as reference.
-
-The output is the result of a functional implementation for the ETCS requirements and architecture which can be used by the industrial as reference. It will be a non-vital  implementation, able to be executed in real-time and in interaction with other components.
+An executable software of the specification shall be provided, as well as a non vital implementation of the on-board unit for laboratory test, simulation and as reference. It will be a non-vital  implementation, able to be executed in real-time and in interaction with other components.
 
 
 \subsection{Contents of this Document}
@@ -82,6 +79,8 @@ The proposed process for the OpenETCS project shall describe:
 
 For the 2 first objectives, the semi-formal  model  shall take into account the safety constraints to apply to the design of a critical railway system.
 
+For each kind of design activities, some items are given on the means and tools to  use. However a detailled description of the methods and tools followed during the design process will be given in D2.4.
+
 The second part of this document describes the system to design during the OpenETCS project, as well as the scope of the safety activities on this system.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -97,10 +96,11 @@ processing systems -- Software for railway control and protection systems}
 processing systems –- Safety related electronic systems for signalling}
 \item FPP --- \emph{Project Outline Full Project Proposal Annex OpenETCS} -- v2.2
 \item SUBSET-026 3.3.0 --- \emph{System Requirement Specification}
-\item SUBSET-076-x 2.3.y --- Test related ERTMS documentation
+\item SUBSET-076-x 2.3.y --- \emph{Test related ERTMS documentation} (this version is related to version 2.3.y  of SUBSET-026)
 \item SUBSET-088 2.3.0 --- \emph{ETCS Application Levels 1 \& 2 - Safety Analysis}
 \item SUBSET-091 3.2.0 --- \emph{Safety Requirements for the Technical Interoperability
 of ETCS in Levels 1 \& 2}
+\item SUBSET-034 3.0.0 --- \emph{Train interface FIS}
 \item CCS TSI --- \emph{ CCS TSI for HS and CR transeuropean rail has been adopted by a Commission Decision 2012/88/EU on the 25th January 2012}
 \item D1.3 -- Project Quality Assurance Plan
 \item D2.1 -- Report on existing methodologies 
