Review remarks +  req ID

--- a/D2.3/intro.tex
+++ b/D2.3/intro.tex
@@ -79,7 +79,7 @@ The proposed process for the OpenETCS project shall describe:
 
 For the 2 first objectives, the semi-formal  model  shall take into account the safety constraints to apply to the design of a critical railway system.
 
-For each kind of design activities, some items are given on the means and tools to  use. However a detailled description of the methods and tools followed during the design process will be given in D2.4.
+For each kind of design activities, some items are given on the means and tools to  use. However a detailed description of the methods and tools followed during the design process will be given in D2.4.
 
 The second part of this document describes the system to design during the OpenETCS project, as well as the scope of the safety activities on this system.
 
